# Legislation_GPT

./: LICENSE  Legislation_GPTpdfoutput.csv  README.md  pyproject.toml  requirements.txt
Legislation_GPT/: main.py  member_list_clean.csv  pdfoutput.csv
Legislation_GPT/components/: sidebar.py
Legislation_GPT/core/: Query.py  Query_Bill.py
Legislation_GPT/tools/: ui.py
